# idol-scout

./: .gitignore  README.md  app.py  debug_download.py  install_and_run.bat  packages.txt  project_info_pages.py  pyproject.toml  requirements.txt  run_analysis.py  run_test.bat  scout.py  streamlit_app.py
.streamlit/: config.toml
code/v2/: audio_extractor_pro.py  mamamoo_references.json  visualizers_v2.py  vocal_embedder.py  vocal_mbti.py
examples/: basic_screening.py  compare_multiple.py  full_pipeline.py
idol_scout/: __init__.py  api.py  cli.py  engine.py  indicators.py  models.py
idol_scout/screener/: __init__.py  audio.py  audio_v2.py  config.py  downloader.py  indicators_100.py  normalizer.py  orchestrator.py  video.py
images/: .gitkeep
results/: .gitkeep
skill/: SKILL.md
streamlit_app/: app_v2.py  requirements.txt
streamlit_app/.streamlit/: config.toml
